# Experimentos

./: CMakeLists.txt  README.txt
Script/: FitnessMatriz.txt  MovePromStats  MoverStats  PromedioStats.cpp  PromedioStats1.cpp  ejecucionesAGS  promstats  promstats1  thebest  thebest.cpp
application/: AGS-AX-SVN.cpp  AGS-AX-SWAP.cpp  AGS-AX-UM.cpp  AGS-SBX-SVN.cpp  AGS-SBX-SWAP.cpp  AGS-SBX-UM.cpp  AGS-UX-SVN.cpp  AGS-UX-SWAP.cpp  AGS-UX-UM.cpp  CMakeLists.txt
datos/: Allposition1.txt  Allposition2.txt  Allposition3.txt  Anclas1.txt  Anclas2.txt  Anclas3.txt  CMakeLists.txt  Matriz1.txt  Matriz2.txt  Matriz3.txt  Semilla.sav  ags-ax-svn.param  ags-ax-swap.param  ags-sbx-svn.param  ags-sbx-swap.param  ags-sbx-um.param  ags-ux-um.param
src/: AX.h  CMakeLists.txt  SBX.h  SVN.h  SWAP.h  UM.h  UX.h  localizacionEvalPenal.cpp  localizacionEvalPenal.h
src/Gnuplot/: gnuplot-iostream.h  graphError.cpp  graphError.h
