#1)Primero se incluyen los codigos

	#Incluye el directorio con tus propios codigos
	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/src)

	#Incluye completamente la libreria ParadisEO
	INCLUDE_DIRECTORIES(${PARADISEO_INCLUDE_DIR})			
				    
#2)Define los ejecutables y dependencias
	
	ADD_EXECUTABLE(AGS-SBX-SWAP AGS-SBX-SWAP.cpp)
	ADD_DEPENDENCIES(AGS-SBX-SWAP lDiscovery)
	ADD_EXECUTABLE(AGS-AX-SWAP AGS-AX-SWAP.cpp)
	ADD_DEPENDENCIES(AGS-AX-SWAP lDiscovery)	
	ADD_EXECUTABLE(AGS-UX-SWAP AGS-UX-SWAP.cpp)
	ADD_DEPENDENCIES(AGS-UX-SWAP lDiscovery)
	ADD_EXECUTABLE(AGS-AX-SVN AGS-AX-SVN.cpp)
	ADD_DEPENDENCIES(AGS-AX-SVN lDiscovery)
	ADD_EXECUTABLE(AGS-SBX-SVN AGS-SBX-SVN.cpp)
	ADD_DEPENDENCIES(AGS-SBX-SVN lDiscovery)
	ADD_EXECUTABLE(AGS-UX-SVN AGS-UX-SVN.cpp)
	ADD_DEPENDENCIES(AGS-UX-SVN lDiscovery)
	ADD_EXECUTABLE(AGS-AX-UM AGS-AX-UM.cpp)
	ADD_DEPENDENCIES(AGS-AX-UM lDiscovery)
	ADD_EXECUTABLE(AGS-SBX-UM AGS-SBX-UM.cpp)
	ADD_DEPENDENCIES(AGS-SBX-UM lDiscovery)
	ADD_EXECUTABLE(AGS-UX-UM AGS-UX-UM.cpp)
	ADD_DEPENDENCIES(AGS-UX-UM lDiscovery)

#3)Vincular las librerias para el ejecutable

	TARGET_LINK_LIBRARIES(AGS-SBX-SWAP ${PARADISEO_LIBRARIES} lDiscovery)
	TARGET_LINK_LIBRARIES(AGS-AX-SWAP ${PARADISEO_LIBRARIES} lDiscovery)
	TARGET_LINK_LIBRARIES(AGS-UX-SWAP ${PARADISEO_LIBRARIES} lDiscovery)
	TARGET_LINK_LIBRARIES(AGS-AX-SVN ${PARADISEO_LIBRARIES} lDiscovery)
	TARGET_LINK_LIBRARIES(AGS-SBX-SVN ${PARADISEO_LIBRARIES} lDiscovery)
	TARGET_LINK_LIBRARIES(AGS-UX-SVN ${PARADISEO_LIBRARIES} lDiscovery)
	TARGET_LINK_LIBRARIES(AGS-AX-UM ${PARADISEO_LIBRARIES} lDiscovery)
	TARGET_LINK_LIBRARIES(AGS-SBX-UM ${PARADISEO_LIBRARIES} lDiscovery)
	TARGET_LINK_LIBRARIES(AGS-UX-UM ${PARADISEO_LIBRARIES} lDiscovery)
